k8s-traefik-stats/k8s/nginx-svc-ingress.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: kts
  name: nginx
  namespace: demo
spec:
  ports:
  - name: demoweb
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: basenginx

---

apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.frontend.rule.type: PathPrefixStrip
  name: nginx
  namespace: demo
  labels:
    version: v1
spec:
  rules:
  - host: api.dfds.cloud
    http:
      paths:
      - backend:
          serviceName: nginx
          servicePort: demoweb
        path: /devexdemo/nginx
